tests/sksl/errors/SwizzleConstantOutput.dsl.glsl
### Compilation failed:

error: cannot assign to this expression

1 error
